fixing overflow

--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,6 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.6em;
+
+  overflow: visible !important; /* Hanya cara sementara saja   */
 }
